syntax = "proto3";
option go_package="proto/id;proto";
package czh.micro.srv.id;

message SnowIDReq {

}

message SnowIDResp {
    int64 ID = 1;
}

message PraseIDReq {
    int64 ID = 1;
}

message PraseIDResp {
    int64 MachineID = 1;
    int64 Sequence = 2;
    int64 Timestamp = 3;
}

service ID {
    rpc GetSnowflakeID(SnowIDReq) returns (SnowIDResp);
    rpc ParseSnowflakeID(PraseIDReq) returns (PraseIDResp);
}